[gd_scene load_steps=10 format=3 uid="uid://dp6hm2w4mkvli"]

[ext_resource type="Script" path="res://scenes/game_orbito/orbito_ui.gd" id="1_qgrcw"]
[ext_resource type="FontFile" uid="uid://c5igkpjkatnoi" path="res://resources/fonts/acknowtt.ttf" id="2_05lnp"]
[ext_resource type="PackedScene" uid="uid://dj0pb3rpmucem" path="res://scenes/game_orbito/orbito_board.tscn" id="3_oto0j"]
[ext_resource type="Texture2D" uid="uid://cbbxgmbhthjew" path="res://resources/images/game_orbito/sprite_orbito_stone_black.svg" id="4_okl51"]
[ext_resource type="Script" path="res://scenes/game_orbito/orbito_turn_order.gd" id="5_ffn4r"]
[ext_resource type="Texture2D" uid="uid://4hs2sut4tcmd" path="res://resources/images/game_orbito/sprite_orbito_stone_white.svg" id="6_t3hbx"]
[ext_resource type="AudioStream" uid="uid://igvhk51bdjfh" path="res://resources/audio/sfx/game_orbito/sfx_game_orbito_place_stone.wav" id="7_p5nx3"]
[ext_resource type="AudioStream" uid="uid://cwdstfcftqayf" path="res://resources/audio/sfx/game_orbito/sfx_game_orbito_move_stone.wav" id="8_m26uu"]
[ext_resource type="AudioStream" uid="uid://bexei7qh5wag" path="res://resources/audio/sfx/general_purpose/sfx_button_click.wav" id="9_fhfsu"]

[node name="orbito_ui" type="Node2D"]
script = ExtResource("1_qgrcw")

[node name="orbit_button" type="Button" parent="."]
offset_left = -172.0
offset_top = 384.0
offset_right = 172.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("2_05lnp")
theme_override_font_sizes/font_size = 128
text = "ORBIT"

[node name="orbito_board" parent="." instance=ExtResource("3_oto0j")]

[node name="orbito_turn_order" type="Sprite2D" parent="."]
position = Vector2(0, -512)
texture = ExtResource("4_okl51")
script = ExtResource("5_ffn4r")
sprite_black = ExtResource("4_okl51")
sprite_white = ExtResource("6_t3hbx")

[node name="do_not_move_button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = 576.0
offset_right = 382.0
offset_bottom = 698.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_05lnp")
theme_override_font_sizes/font_size = 128
text = "Do not move"

[node name="move_opponent_button" type="Button" parent="."]
offset_left = -451.0
offset_top = 384.0
offset_right = 451.0
offset_bottom = 506.0
theme_override_fonts/font = ExtResource("2_05lnp")
theme_override_font_sizes/font_size = 128
text = "move opponent"

[node name="place_stone" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_p5nx3")
bus = &"SFX"

[node name="move_stone" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_m26uu")
bus = &"SFX"

[node name="click_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_fhfsu")
bus = &"SFX"

[connection signal="request_move_stone" from="." to="orbito_board" method="receive_request_move_stone"]
[connection signal="request_orbit_ui" from="." to="orbito_board" method="receive_request_orbit_ui"]
[connection signal="request_place_stone" from="." to="orbito_board" method="receive_request_place_stone"]
[connection signal="request_remove_stone" from="." to="orbito_board" method="receive_request_remove_stone"]
[connection signal="request_set_cells_disabled" from="." to="orbito_board" method="_on_orbito_ui_request_set_cells_disabled"]
[connection signal="pressed" from="orbit_button" to="." method="_on_orbit_button_pressed"]
[connection signal="request_select_cell" from="orbito_board" to="." method="receive_request_select_stone"]
[connection signal="pressed" from="do_not_move_button" to="." method="_on_do_not_move_button_pressed"]
[connection signal="pressed" from="do_not_move_button" to="." method="button_click_sound"]
[connection signal="pressed" from="move_opponent_button" to="." method="_on_move_opponent_button_pressed"]
[connection signal="pressed" from="move_opponent_button" to="." method="button_click_sound"]
